--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
   <link rel="stylesheet" type="text/css" href="dist/angular-socialshare.css">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/ikjalccfdoghanieehppljppanjlmkcf">
 
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">-->
+  <link rel="stylesheet" href="app/ui-angular/ui-angular.css">
 </head>
 
 <body ng-app="app" pd-index>
   <img class="top image" src="img/page_header.jpg" />
-  <!--<div class="ui inverted blue main menu" ui-visibility ui-visibility-data="vm.menuVisibility">-->
-  <div class="ui inverted blue main menu">
+  <div class="ui inverted blue main menu" ui-visibility ui-visibility-data="vm.menuVisibility">
+  <!--<div class="ui inverted blue main menu">-->
     <div class="ui text container">
       <!--<div href="#" class="header item">
         Paul Dhillon
       </div>-->
       <!--<a href="#/" class="item" ng-class="{active:vm.isActive('/')}">Home</a>-->
       <!--<a href="#/consulting" class="item" ng-class="{active:vm.isActive('/consulting')}">Consulting</a>-->
-      <!--<a href="#/practical-startpage" class="item" ng-class="{active:vm.isActive('/practical-startpage')}">Practical Startpage</a>-->
-      <!--<a href="#/ui-angular" class="item" ng-class="{active:vm.isActive('/ui-angular')}">UI Angular</a>-->
+      <a href="#/practical-startpage" class="item" ng-class="{active:vm.isActive('/practical-startpage')}">Practical Startpage</a>
+      <a href="#/ui-angular" class="item" ng-class="{active:vm.isActive('/ui-angular')}">UI Angular</a>
       <!--<a href="#/ps-uninstall" class="item" ng-class="{active:vm.isActive('/ui-angular')}">Uninstall</a>-->
     </div>
   </div>
@@ -71,12 +71,12 @@
       </div>-->
     </div>
   </div>
-  <script src="https://oss.maxcdn.com/jquery/2.2.0/jquery.min.js"></script>
-  <script src="https://code.angularjs.org/1.5.0//angular.min.js"></script>
-  <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
+  <script src="//oss.maxcdn.com/jquery/2.2.0/jquery.min.js"></script>
+  <script src="//code.angularjs.org/1.5.0//angular.min.js"></script>
+  <script src="//code.angularjs.org/1.5.0/angular-route.min.js"></script>
   <script src="dist/semantic-ui/dist/semantic.min.js"></script>
   
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>-->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
 
   <script src="dist/ui-angular.min.js"></script>
   <script src="dist/angular-socialshare.js"></script>
@@ -100,6 +100,7 @@
   <script src="app/practical-startpage/ps-uninstall.js"></script>
   <script src="app/practical-startpage/practical-startpage.js"></script>
   <script src="app/ui-angular/ui-angular.js"></script>
+  <script src="app/ui-angular/ui-angular-readme.js"></script>
 
   <!--Load Last-->
 
