--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -1,6 +1,6 @@
 <div class="ui segment" ui-sticky-context="vm.stickyContext">
-  <div class="left ui rail">
-    <div class="ui sticky vertical right floated labeled icon menu" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext">
+  <div class="right ui rail">
+    <div class="ui sticky vertical labeled icon menu" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext">
       <a class="item" ng-href="{{vm.url}}#about" ng-class="{active:vm.isActive('about')}">
         <i class="info icon"></i> About
       </a>
