--- a/app/ui-angular/ui-angular-readme.html
+++ b/app/ui-angular/ui-angular-readme.html
@@ -1,56 +1,67 @@
-<h1 id="ui-angular">UI Angular</h1>
+<p align="center">
+  <img src="img/ui-angular.png" alt="UI Angular"/><br/>
+</p>
+
+<div class="anchor" id="ui-angular"></div>
+<h1>UI Angular</h1>
 <p>My <em>KISS</em> -  semantic-ui/angularJS library</p>
-<h2 id="status">Status</h2>
-<p>This is WIP, and only modules I have needed are included; but requests and contributions are welcome.</p>
+<div class="anchor" id="about"></div>
+<h2>About</h2>
+<div class="anchor" id="approach"></div>
+<h3>Approach</h3>
+<p>Designed around KISS Principle <em>Keep it simple stupid</em></p>
+<ol>
+<li>Accept <strong>all</strong> parameters that <em>Semantic UI</em> does, angular features are extra.</li>
+<li>Pass data in variables and objects (don&#39;t clutter html, use controller and services)</li>
+<li>Call <em>Semantic UI</em> js code as much as possible: <strong>Why reinvent the wheel!</strong></li>
+<li><em>Semantic UI</em> syntax looks good with angular, no need to have directive to add html classes unless really nessesary or simpifies significantly</li>
+<li>Follow from last two points :If there is no <em>Semantic UI</em> js code, there needs to be a real benefit to write angular code.</li>
+</ol>
+<div class="anchor" id="dependencies"></div>
+<h3>Dependencies</h3>
+<ul>
+<li>AngularJS</li>
+<li>semantic UI</li>
+<li>jQuery</li>
+</ul>
+<div class="anchor" id="status"></div>
+<h3>Status</h3>
+<p>I have written directive as I have needed the modules, which mean they are used live and work. If you request a directive please allow a week for me to write it.</p>
 <p>Please put an issue if you intend to contribute your work, then I will put some effort to write the rules and guidlines etc.</p>
+<div class="anchor" id="modules"></div>
+<h4>Modules</h4>
 <ul>
-<li><p>Modules</p>
-<ul>
-<li>[ ] Accordian</li>
-<li>[ ] <del>Checkbox</del> *</li>
-<li>[ ] Dimmer</li>
-<li>[x] Dropdown</li>
-<li>[ ] Embed</li>
-<li>[x] Modal</li>
-<li>[ ] <del>Nag</del> *</li>
-<li>[x] Popup</li>
-<li>[ ] Progress</li>
-<li>[ ] Rating</li>
-<li>[ ] Search**</li>
-<li>[ ] Shape</li>
-<li>[ ] Sidebar</li>
-<li>[x] Sticky</li>
-<li>[ ] <del>Tab</del> *</li>
-<li>[ ] Transition**</li>
+<div class="ui checkbox"><input type="checkbox"><label> Accordian</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> <del>Checkbox</del> *</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Dimmer</label></div><br>
+<div class="ui checked checkbox"><input type="checkbox" checked="checked"><label> Dropdown</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Embed</label></div><br>
+<div class="ui checked checkbox"><input type="checkbox" checked="checked"><label> Modal</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> <del>Nag</del> *</label></div><br>
+<div class="ui checked checkbox"><input type="checkbox" checked="checked"><label> Popup</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Progress</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Rating</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Search**</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Shape</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Sidebar</label></div><br>
+<div class="ui checked checkbox"><input type="checkbox" checked="checked"><label> Sticky</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> <del>Tab</del> *</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> Transition**</label></div><br>
 </ul>
-</li>
-<li><p>Behaviours</p>
+<div class="anchor" id="behaviours"></div>
+<h4>Behaviours</h4>
 <ul>
-<li>[ ] <del>API</del> *</li>
-<li>[ ] <del>Form Validation</del> *</li>
-<li>[x] visibility</li>
-</ul>
-</li>
+<div class="ui checkbox"><input type="checkbox"><label> <del>API</del> *</label></div><br>
+<div class="ui checkbox"><input type="checkbox"><label> <del>Form Validation</del> *</label></div><br>
+<div class="ui checked checkbox"><input type="checkbox" checked="checked"><label> visibility</label></div><br>
 </ul>
 <p>* Found AngularJS out of the box does the job well enough
 ** Not sure if AngularJs is better suited or not </p>
-<h2 id="dependencies">Dependencies</h2>
-<ul>
-<li>angular: ...</li>
-<li>semantic-ui: both css and javascripts</li>
-<li>jquery: for semantic-ui</li>
-</ul>
-<h2 id="approach">Approach</h2>
-<p>Designed around KISS Principle <em>Keep it simple stupid</em></p>
-<ul>
-<li>Call <em>Semantic UI</em> js code as much as possible: <strong>Why reinvent the wheel!</strong></li>
-<li>Accept <strong>all</strong> parameters that <em>Semantic UI</em> does, as an object (don&#39;t clutter html, use controller and services)</li>
-<li><em>Semantic UI</em> syntax looks good with angular, no need to have directive to add html classes unless really nessesary or simpifies significantly</li>
-<li>If there is no <em>Semantic UI</em> js code, there needs to be a real benefit to write angular code (see point above)</li>
-</ul>
 
-<h2 id="behaviours">Behaviours</h2>
-<h3 id="common-features">Common features</h3>
+<div class="anchor" id="behaviours"></div>
+<h2>Behaviours</h2>
+<div class="anchor" id="common-features"></div>
+<h3>Common features</h3>
 <ul>
 <li>All object are initiated if needed to. E.g.<pre class="prettyprint lang-javascript">$(&#39;.classes&#39;).method();
 </pre>
@@ -81,7 +92,8 @@
   callBack: function(){...}
  });
 </pre>
-<h3 id="visibility">Visibility</h3>
+<div class="anchor" id="visibility"></div>
+<h3>Visibility</h3>
 <pre class="prettyprint lang-html">&lt;ANY ui-visibility=&quot;vm.visibilityObject&quot;
   ui-visibility-data=&quot;vm.visibilityData&quot;&gt;
 
@@ -94,8 +106,10 @@
 <li><code>vm.visibilityObject</code> <a href="http://semantic-ui.com/behaviors/visibility.html#behaviors">Usage in Semantic UI</a></li>
 </ul>
 
-<h2 id="modules">Modules</h2>
-<h3 id="common-features">Common features</h3>
+<div class="anchor" id="modules"></div>
+<h2>Modules</h2>
+<div class="anchor" id="common-features"></div>
+<h3>Common features</h3>
 <ul>
 <li>All object are initiated if needed to. E.g.<pre class="prettyprint lang-javascript">$(&#39;.classes&#39;).method();
 </pre>
@@ -126,7 +140,8 @@
   callBack: function(){...}
  });
 </pre>
-<h3 id="dropdown">Dropdown</h3>
+<div class="anchor" id="dropdown"></div>
+<h3>Dropdown</h3>
 <pre class="prettyprint lang-html">&lt;ANY ui-dropdown=&quot;vm.dropdownObject&quot; 
   class=&quot;ui dropdown&quot; 
   ui-dropdown-data=&quot;vm.dropdownData&quot;&gt;
@@ -146,7 +161,8 @@
 <li><code>vm.dropdownObject</code> <a href="http://semantic-ui.com/modules/dropdown.html#behavior">Usage in Semantic UI</a></li>
 </ul>
 <p><strong>NOTE:</strong> There are a lot of design options for dropdowns in <a href="http://semantic-ui.com">Semantic UI</a> and therefore not practical to allow passing of the items as an array. Use <code>ng-repeat</code> to build dynamic dropdowns.</p>
-<h3 id="modal">Modal</h3>
+<div class="anchor" id="modal"></div>
+<h3>Modal</h3>
 <pre class="prettyprint lang-html">&lt;ui-modal 
   ui-modal-show=&quot;vm.modalShow&quot;
   ui-modal-url=&quot;urlpath/modal.html || vm.modalUrl&quot;
@@ -175,7 +191,8 @@
 <li><p><code>vm.modalObject</code> <a href="http://semantic-ui.com/modules/modal.html#behavior">Usage in Semantic UI</a></p>
 </li>
 </ul>
-<h3 id="popup">Popup</h3>
+<div class="anchor" id="popup"></div>
+<h3>Popup</h3>
 <pre class="prettyprint lang-html">&lt;ANY ui-popup=&quot;vm.popupData&quot; 
   ui-popup-obj=&quot;vm.popupObject&quot;
   semanticUIMetadata&gt;
@@ -192,7 +209,8 @@
 <li><p><code>semanticUIMetadata</code> Can also specify content with html attributes, see <a href="http://semantic-ui.com/modules/popup.html#specifying-content-in-metadata">Specifying Content In Metadata in Semantic UI</a></p>
 </li>
 </ul>
-<h3 id="sticky">Sticky</h3>
+<div class="anchor" id="sticky"></div>
+<h3>Sticky</h3>
 <pre class="prettyprint lang-html">&lt;ANY-OPTIONAL ui-sticky-context=&quot;vm.stickyContext&quot;&gt; 
 
   ...
