--- a/app/ui-angular/ui-angular.html
+++ b/app/ui-angular/ui-angular.html
@@ -1,6 +1,6 @@
 <div class="ui segment" ui-sticky-context="vm.stickyContext">
-  <div class="left ui rail">
-    <div class="ui sticky ui vertical right floated  menu" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext" ng-include="vm.menuUrl">
+  <div class="right ui rail">
+    <div class="ui sticky" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext" ng-include="vm.menuUrl">
 
     </div>
   </div>
